# tycvd_2

./: .gitignore  LICENSE  README.md  config.toml  pra2.Rmd  pra2.html  pyproject.toml  requirements.txt  results.csv  scrape.py  test_prepare.py  test_scraper.py  testing.py
data/: countries.csv  exchange_rates_usd.csv  results.csv
source/: __init__.py  cli.py  countries_selector_wizard.py  prepare.py  scraper.py  stockscraper.py  utils.py
tests/: test_scraper.py  testing.py  testlist.txt
